<resources>
    <string name="app_name">DPMController</string>

    <string name="info_label">Status info</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="title_activity_app_list">AppListActivity</string>

    <string name="set_restrictions_btn">Set\nRestrictions</string>
    <string name="clear_restrictions_btn">Clear\nRestrictions</string>
    <string name="install_package_btn">Install Package (standard)</string>
    <string name="package_list_btn">Package List</string>
    <string name="clear_device_owner_btn">Clear Device Owner</string>

    <string name="proxy_switch">Proxy</string>
    <string name="os_update_switch">OS Update</string>
    <string name="switch_text"></string>
</resources>
